🐛 Fix: Usar Gunicorn no start command

--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: caos-ticket-dashboard
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: python app.py
+    startCommand: gunicorn app:app
     envVars:
       - key: DISCORD_CLIENT_ID
         sync: false
